Update font size and hotel text style

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DB_DATABASE=hotel_app
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=reverb
+BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
