function gamay kulang

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "guzzlehttp/guzzle": "^7.4.5",
         "intervention/image": "^2.5",
         "laravel/framework": "^11.0",
-        "laravel/reverb": "@beta",
+        "laravel/reverb": "^1.4",
         "laravel/tinker": "^2.5",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-activitylog": "^4.8"
