--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.2",
         "guzzlehttp/guzzle": "^7.4.5",
         "intervention/image": "^2.5",
         "laravel/framework": "^11.0",
